[package]
name = "wallet-example"
version = "0.1.0"
edition = "2021"

[dependencies]
namada_core = { git = "https://github.com/anoma/namada", tag = "v0.44.0" }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.44.0", default-features = false, features = ["std", "async-send", "download-params"] }
namada_tx = { git = "https://github.com/anoma/namada", tag = "v0.44.0" }
namada_governance = { git = "https://github.com/anoma/namada", tag = "v0.44.0" }
namada_ibc = { git = "https://github.com/anoma/namada", tag = "v0.44.0" }
namada_token = { git = "https://github.com/anoma/namada", tag = "v0.44.0" }
namada_parameters = { git = "https://github.com/anoma/namada", tag = "v0.44.0" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada", tag = "v0.44.0" }
tendermint = "0.38.0"
tendermint-config = "0.38.0"
tendermint-rpc = { version = "0.38.0", features = ["http-client"] }
tendermint-proto = "0.38.0"
tokio = { version = "1.0", features = ["full"] }